# medical-form-poc

./: docker-compose.yml
api/: .env.example  pyproject.toml
api/assets/: result.json
api/utils/: spotify.py
