[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "loguru>=0.7.3",
    "pydantic>=2.10.4",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff]
exclude = ["*.ipynb" ]

[tool.ruff.lint]
select = [
    "I","E","F","W"
]